# pylocres

./: README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: workflow.yml
pylocres/: __init__.py  city_hash.py  file_io.py  locres.py
src/pylocres/: __init__.py  cli.py  crc_hash.py  file_io.py  locmeta.py  locres.py
tests/: test.locres  test_all.py  test_hash.py  ver_0.locres  ver_1.locres  ver_2.locres  ver_3.locres
