[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylocres"
version = "0.0.3"
authors = [
  { name = "stas96111", email = "stas96111@gmail.com" },
]
description = "Python library for working with Unreal Engine .locres translation files. "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/stas96111/pylocres"
